--- a/app/globals.css
+++ b/app/globals.css
@@ -1,3 +1,8 @@
 @import "tailwindcss/base";
 @import "tailwindcss/components";
 @import "tailwindcss/utilities";
+
+section {
+    padding-top: 60px;
+    padding-bottom: 60px;
+}
